# mochify-cli

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: api.rs  cli.rs  main.rs
src/mcp/: mod.rs  tools.rs
