[package]
name = "mochify-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
