[package]
name = "mochify-cli"
version = "0.2.3"
edition = "2024"
license = "MIT"

[[bin]]
name = "mochify"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
imagesize = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
indicatif = "0.17"
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
